# ai_meeting

./: .env.example  .gitignore  README.md  pom.xml  pyproject.toml  requirements.txt
app/: config.py  database.py  deps.py  enums.py  main.py  models.py  schemas.py
app/api/: __init__.py  admin.py  callbacks.py  meetings.py  shares.py
app/services/: knowledge_service.py  result_parser.py  storage_service.py  tingwu_client.py  worker_service.py
app/utils/: idempotency.py  redis_lock.py  security.py
docs/: api-data-model.md  architecture.md  deployment.md  testing.md
docs/reports/: api_e2e_real_report_20260304_182748.md  api_e2e_real_report_20260304_final.md  web_e2e_real_run_20260305.md
scripts/: run_worker.py
src/main/java/com/gczm/aimeeting/: AiMeetingApplication.java
src/main/java/com/gczm/aimeeting/common/: ApiException.java  GlobalExceptionHandler.java  Headers.java  MeetingStateMachine.java
src/main/java/com/gczm/aimeeting/config/: AppProperties.java  CommonConfig.java  MybatisAutoFillHandler.java  OpenApiConfig.java
src/main/java/com/gczm/aimeeting/controller/: AdminController.java  CallbackController.java  FileController.java  HealthController.java  MeetingController.java  ShareController.java
src/main/java/com/gczm/aimeeting/dto/: AudioChunkUploadResponse.java  ParseJobResponse.java  (+13 more)
src/main/resources/: application.yml  schema.sql
src/main/resources/static/simulator/: index.html  prototype-flow.html  prototype-flow.js  simulator.js
src/test/resources/: application.yml
tests/: conftest.py  test_state_machine.py  test_tingwu_and_worker.py
(+40 files in other folders)
