[project]
name = "ai-meeting-backend"
version = "0.1.0"
description = "AI meeting backend with Alibaba Tingwu integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.36",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "requests>=2.32.3",
  "redis>=5.2.1",
  "oss2>=2.19.1",
  "passlib[bcrypt]>=1.7.4",
  "alibabacloud_tingwu20230930>=2.0.24",
  "alibabacloud-tea-openapi>=0.4.3",
  "alibabacloud-tea-util>=0.3.14",
  "alibabacloud-openapi-util>=0.2.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "httpx>=0.28.1",
  "ruff>=0.9.2"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: tests requiring real external services"
]

[tool.ruff]
line-length = 100
